<resources>
    <string name="app_name">Chatime</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_chat_list">Chats</string>
    <string name="title_bottle_list">Bottles</string>
    <string name="title_profile">Profile</string>
    <string name="hint_chat_key"><i>What\'s on your mind?</i></string>
    <string name="pick_a_bottle">Pick a drift bottle</string>
    <string name="create_a_bottle">Create a drift bottle</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="upload">Upload</string>
    <string name="welcome_fmt">Welcome, %s!</string>
    <string name="sign_in_required">Please sign in</string>
    <string name="preference_file_key">local_file_storage</string>
    <string name="current_chat_room_id">CURRENT_CHAT_ROOM_ID</string>
    <string name="current_drift_bottle">CURRENT_DRIFT_BOTTLE</string>
    <string name="default_topic">#DEFAULT_TOPIC#</string>
    <string name="upload_from_gallery">Upload from Gallery</string>
    <string name="take_photo_from_camera">Take Photo from Camera</string>
    <string name="edit_profile_photo">Edit Profile Photo</string>
    <string name="create_drift_bottle">Create Drift Bottle</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="remove">Remove</string>
    <string name="write_your_message_here">Write your message here...</string>
    <string name="create">Create</string>
    <string name="record_an_audio_message">Record an audio message</string>
    <string name="add_location">Add a location</string>
    <string name="from_gallery">From Gallery</string>
    <string name="from_camera">From Camera</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="fmt_add_location">Your bottle will be dropped at %s</string>
    <string name="let_s_chat">Let\'s Chat</string>
    <string name="sign_out">Sign out</string>
    <string name="matching_failed">Not able to find anyone to chat with. Returning to Home...</string>
    <string name="fmt_lv">Lv %d</string>
    <string name="fmt_points">%d/100</string>
    <string name="about_me">About Me</string>
    <string name="drift_bottle">Drift Bottle</string>
    <string name="fmt_bottle_audio_label">audio message attached (%d seconds)</string>
    <string name="photo_attached">photo attached</string>
    <string name="bottle_location_label">This drift bottle is found at</string>
    <string name="fmt_bottle_info">By <i>%s</i> at <i>%s</i></string>
    <string name="message_to_creator">Message to creator</string>
    <string name="pick_another_one">Pick another one</string>
    <string name="throw_it_back">Throw it back</string>
    <string name="fmt_picked_at">Picked at %s</string>
    <string name="fmt_from">from %s</string>
    <string name="check_in">Check in to get 10 points</string>
    <string name="check_in_already">You\'ve already checked in. Come back tomorrow!</string>
    <string name="fmt_last_message">Last message sent at %s</string>
</resources>
