<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_8"
    android:layout_marginTop="@dimen/dp_8"
    android:background="@color/colorSecond"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_56"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:gravity="center"
        android:text="@string/edit_profile_photo"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_edit_photo_camera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:backgroundTint="@color/colorSecond"
        android:drawablePadding="@dimen/dp_32"
        android:drawableStart="@drawable/ic_baseline_camera_alt_24"
        android:gravity="start|center_vertical"
        android:text="@string/take_photo_from_camera"
        android:textSize="16sp"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/text_edit_photo_gallery"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:backgroundTint="@color/colorSecond"
        android:drawablePadding="@dimen/dp_32"
        android:drawableStart="@drawable/ic_baseline_image_24"
        android:gravity="start|center_vertical"
        android:text="@string/upload_from_gallery"
        android:textSize="16sp"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_photo_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <Button
            android:id="@+id/button_upload_profile_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            app:layout_constraintEnd_toEndOf="@+id/image_selected_photo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/image_selected_photo"
            app:layout_constraintTop_toBottomOf="@+id/image_selected_photo" />

        <ImageView
            android:id="@+id/image_selected_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>