<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.activities.DriftBottleActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/head_toolbar_drift_bottle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            android:id="@+id/toolbar_title_drift_bottle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/drift_bottle"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="12dp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:fillViewport="false"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_bottom_toolbar_drift_bottle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head_toolbar_drift_bottle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/dp_8"
            android:paddingStart="@dimen/dp_8">

            <TextView
                android:id="@+id/text_bottle_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/drift_bottle"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/text_bottle_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fmt_bottle_info" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_bottle_audio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_16"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/image_bottle_audio_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/fmt_bottle_audio_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_keyboard_voice_24"
                    app:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/text_bottle_audio_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/fmt_bottle_audio_label"
                    app:layout_constraintBottom_toBottomOf="@+id/image_bottle_audio_icon"
                    app:layout_constraintStart_toEndOf="@+id/image_bottle_audio_icon"
                    app:layout_constraintTop_toTopOf="@+id/image_bottle_audio_icon" />

                <TextView
                    android:id="@+id/text_bottle_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/play"
                    app:layout_constraintBottom_toBottomOf="@+id/fab_bottle_audio"
                    app:layout_constraintStart_toEndOf="@+id/fab_bottle_audio"
                    app:layout_constraintTop_toTopOf="@+id/fab_bottle_audio" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_bottle_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="@dimen/dp_48"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:contentDescription="@string/play"
                    android:focusable="true"
                    app:backgroundTint="@color/colorPrimary"
                    app:fabCustomSize="@dimen/dp_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_play_arrow_24" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_bottle_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/image_bottle_photo_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/photo_attached"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_image_24"
                    app:tint="@color/colorPrimary" />

                <ImageView
                    android:id="@+id/image_bottle_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/photo_attached"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_max="@dimen/dp_200"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_bottle_photo_icon"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/text_bottle_photo_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/photo_attached"
                    app:layout_constraintBottom_toBottomOf="@+id/image_bottle_photo_icon"
                    app:layout_constraintStart_toEndOf="@+id/image_bottle_photo_icon"
                    app:layout_constraintTop_toTopOf="@+id/image_bottle_photo_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_bottle_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/image_bottle_location_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/bottle_location_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_place_24"
                    app:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/text_bottle_location_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/bottle_location_label"
                    app:layout_constraintBottom_toBottomOf="@+id/image_bottle_location_icon"
                    app:layout_constraintStart_toEndOf="@+id/image_bottle_location_icon"
                    app:layout_constraintTop_toTopOf="@+id/image_bottle_location_icon" />

                <fragment
                    android:id="@+id/map_bottle_location"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_160"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_bottle_location_icon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_bottom_toolbar_drift_bottle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3">

        <Button
            android:id="@+id/button_bottle_throw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/throw_it_back"
            android:textColor="@color/colorLight"
            android:textColorHint="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/bottom_toolbar_drift_bottle"
            app:layout_constraintEnd_toStartOf="@+id/bottom_divider_left_bottle"
            app:layout_constraintStart_toStartOf="@+id/bottom_toolbar_drift_bottle"
            app:layout_constraintTop_toTopOf="@+id/bottom_toolbar_drift_bottle" />

        <Button
            android:id="@+id/button_bottle_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/message_to_creator"
            android:textColor="@color/colorLight"
            android:textColorHint="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/bottom_toolbar_drift_bottle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bottom_divider_right_bottle"
            app:layout_constraintTop_toTopOf="@+id/bottom_toolbar_drift_bottle" />

        <Button
            android:id="@+id/button_bottle_pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/pick_another_one"
            android:textColor="@color/colorLight"
            android:textColorHint="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/bottom_toolbar_drift_bottle"
            app:layout_constraintEnd_toStartOf="@+id/bottom_divider_right_bottle"
            app:layout_constraintStart_toEndOf="@+id/bottom_divider_left_bottle"
            app:layout_constraintTop_toTopOf="@+id/bottom_toolbar_drift_bottle" />

        <View
            android:id="@+id/bottom_divider_right_bottle"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.66"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/bottom_divider_left_bottle"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/bottom_toolbar_drift_bottle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>